--- a/blog-project/package.json
+++ b/blog-project/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/postgrest-js": "^1.17.7",
+    "@supabase/supabase-js": "^2.47.7",
+    "dotenv": "^16.4.7",
+    "next": "^15.1.0",
+    "pg-hstore": "^2.3.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
+    "react-simple-typewriter": "^5.0.1",
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
