--- a/blog-project/package.json
+++ b/blog-project/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@supabase/postgrest-js": "^1.17.7",
     "@supabase/supabase-js": "^2.47.7",
     "dotenv": "^16.4.7",
