--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-blog-project/node_modules
+node_modules
 dist
 dist-ssr
 *.local
+.gitignore
 
 # Editor directories and files
 .vscode/*
