--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@supabase/postgrest-js": "^1.17.7",
     "@supabase/supabase-js": "^2.47.7",
     "dotenv": "^16.4.7",
+    "motion": "^11.15.0",
     "next": "^15.1.0",
     "pg-hstore": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.0.2",
     "react-simple-typewriter": "^5.0.1",
     "sequelize": "^6.37.5"
