--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/postgrest-js": "^1.17.7",
     "@supabase/supabase-js": "^2.47.7",
     "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.4.10",
     "motion": "^11.15.0",
     "next": "^15.1.0",
